--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ button img {
   display: flex;
 }
 .estudio-container {
-  width: 500px;
+  width: 550px;
   margin: 6% auto 0 auto;
   padding: 0 18px;
   text-align: center;
@@ -285,9 +285,48 @@ button img {
   right: 0;
   bottom: 0;
 }
+#first-line {
+  position: absolute;
+  top: 5%;
+  left: 15%;
+  height: 1000px;
+  width: 5px;
+  background: #fdc929;
+}
 @media screen and (max-width: 780px) {
   #estudio img {
     width: 70%;
     left: 15%;
   }
+  #first-line {
+    left: 0;
+    height: calc(100vw);
+    min-height: 430px;
+  }
+}
+#servicios {
+  position: relative;
+  width: 100%;
+  height: 1000px;
+}
+.servicios-container {
+  width: 550px;
+  padding: 0 18px;
+  margin: 0 auto;
+}
+.servicios-container img {
+  padding-top: 80px;
+  width: 40px;
+  margin-bottom: 5px;
+}
+.servicios-container h3 {
+  font-size: 24px;
+  color: #e7205b;
+}
+.servicios-container p {
+  padding-top: 10px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 26px;
+  text-align: justify;
 }
