--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ a:visited,
 a:hover,
 a:active {
   text-decoration: none;
+  color: black;
 }
 .anchor {
   position: absolute;
@@ -141,7 +142,6 @@ button img {
   width: 100%;
   height: calc(100vh - 80px);
   max-height: 680px;
-  background: pink;
 }
 #gallery {
   width: 100%;
@@ -264,7 +264,7 @@ button img {
   text-align: center;
   color: black;
 }
-.estudio-container h3 {
+h3 {
   font-size: 32px;
   font-weight: 300;
 }
@@ -274,7 +274,7 @@ button img {
   padding-bottom: 4%;
 }
 .estudio-container p {
-  font-size: .9em;
+  font-size: 0.9em;
   font-weight: 300;
   text-align: justify;
   line-height: 26px;
@@ -307,10 +307,11 @@ button img {
 #servicios {
   position: relative;
   width: 100%;
-  height: 1000px;
+  height: auto;
+  padding-bottom: 60px;
 }
 .servicios-container {
-  width: 550px;
+  max-width: 550px;
   padding: 0 18px;
   margin: 0 auto;
 }
@@ -329,4 +330,185 @@ button img {
   font-weight: 300;
   line-height: 26px;
   text-align: justify;
+}
+#second-line {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  height: 1000px;
+  width: 5px;
+  background: #fdc929;
+}
+@media screen and (max-width: 780px) {
+  #second-line {
+    right: 0;
+    height: 95%;
+    min-height: 430px;
+  }
+}
+#proyectos {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+#p-title,
+#p-container {
+  width: 80%;
+}
+#p-title {
+  height: 90px;
+  margin-top: 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+#p-container {
+  width: 80%;
+  max-width: 1000px;
+  min-width: 800px;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  min-width: 750px;
+}
+.thumbnail {
+  position: relative;
+  width: 40%;
+  margin: 10px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.thumbnail img {
+  width: 100%;
+  height: auto;
+}
+.p-description {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  font-size: 18px;
+  color: white;
+}
+.data {
+  width: 90%;
+  height: auto;
+  margin-top: 6px;
+  margin-left: 15px;
+}
+.data h4 {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+}
+.data p {
+  font-weight: 300;
+  font-size: 14px;
+}
+.link {
+  position: absolute;
+  right: 20px;
+  bottom: 15px;
+  padding-bottom: 3px;
+  border-bottom: 1px solid white;
+}
+.link a {
+  font-size: 16px;
+  font-weight: 400;
+  color: white;
+}
+.link a p::after {
+  content: " +";
+}
+@media screen and (max-width: 780px) {
+  #p-container {
+    width: 100%;
+    min-width: initial;
+  }
+  .thumbnail {
+    width: 70%;
+    max-width: 400px;
+    min-width: 280px;
+  }
+  .p-description {
+    position: absolute;
+    width: 100%;
+    height: 25%;
+    top: 0;
+    background: rgba(0, 0, 0, 0.8);
+    font-size: 18px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+  .data {
+    width: 65%;
+    height: 70%;
+    height: auto;
+    margin: 0;
+  }
+  .data h4,
+  .data p {
+    font-size: 12px;
+    font-weight: 300;
+  }
+  .link {
+    position: relative;
+    width: 28%;
+    height: 50%;
+    background: rgba(0, 0, 0, 0.4);
+    border: none;
+    padding: 0;
+    left: 0;
+    bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .link a p {
+    font-size: 12px;
+  }
+  .link a p::after {
+    content: "";
+  }
 }
