--- a/less/servicios.less
+++ b/less/servicios.less
@@ -1,11 +1,12 @@
 #servicios{
     position: relative;
     width: 100%;
-    height: 1000px;
+    height: auto;
+    padding-bottom: 60px;
 }
 
 .servicios-container{
-    width: 550px;
+    max-width: 550px;
     padding: 0 18px;
     margin: 0 auto;
 }
@@ -27,4 +28,21 @@
     font-weight: 300;
     line-height: 26px;
     text-align: justify;
+}
+
+#second-line {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    height: 1000px;
+    width: 5px;
+    background: #fdc929;
+}
+
+@media screen and(max-width: 780px){
+    #second-line {
+        right: 0;
+        height: 95%;
+        min-height: 430px;;
+    }
 }
