--- a/less/global.less
+++ b/less/global.less
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 html{
@@ -15,10 +16,6 @@ body {
     margin: 0 auto;
 }
 
-a, p, h1, h2, h3, h4 {
-    font-family: 'Montserrat', sans-serif;
-}
-
 a:link, a:visited, a:hover, a:active {
     text-decoration: none;
     color: black;
@@ -26,15 +23,19 @@ a:link, a:visited, a:hover, a:active {
 
 .anchor {
     position: absolute;
-    top: -80px;
+    top: -55px;
     width: 100%;
-    height: 80px;
+    height: 55px;
 }
 
 .center{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+p {
+    color: #4a4a4a;
 }
 
 @media screen and(max-width: 780px){
