--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,9 @@
 @import 'global.less';
 @import 'nav.less';
+@import 'menu-desplegable.less';
 @import 'hero-gallery.less';
 @import 'estudio.less';
 @import 'servicios.less';
 @import 'proyectos.less';
+@import 'contacto.less';
+@import 'footer.less';
