--- a/less/nav.less
+++ b/less/nav.less
@@ -3,7 +3,7 @@ nav {
     top: 0;
     width: 100%;
     max-width: 1366px;
-    height: 80px;
+    height: 55px;
     z-index: 100;
     display: flex;
     box-shadow: 3px 3px 9px #0000002a;
@@ -11,7 +11,7 @@ nav {
 }
 
 nav #logo{
-    width: 20%;
+    width: 16%;
     min-width: 200px;
     height: 100%;
 }
@@ -20,7 +20,7 @@ nav #logo a {
     width: 200px;
 }
 nav #logo a img{
-    height: 45%;
+    height: 60%;
 }
 nav #nav-menu {
     position: absolute;
@@ -38,7 +38,7 @@ nav #nav-menu div{
 }
 
 nav #nav-menu div a {
-    font-size: 24;
+    font-size: 14px;
     text-transform: uppercase;
     font-weight: 600;
 }
