--- a/less/servicios.less
+++ b/less/servicios.less
@@ -32,17 +32,44 @@
 
 #second-line {
     position: absolute;
-    top: 5%;
-    right: 5%;
-    height: 1000px;
+    top: 8%;
+    left: calc(100vw * .9);
+    height: 1400px;
     width: 5px;
-    background: #fdc929;
+    background: #61d8c2;
 }
 
 @media screen and(max-width: 780px){
+   
     #second-line {
+        left: initial;
         right: 0;
-        height: 95%;
+        top: 3%;
+        height: 93%;
         min-height: 430px;;
     }
+    
+}
+
+@media screen and(max-width: 600px){
+
+    .servicios-container {
+        text-align: center;
+    }
+
+    .servicios-container img{
+        width: 26px;
+    }
+
+    .servicios-container h3{
+        text-align: center;
+        font-size: 14px;
+        font-weight: 700;
+    }
+
+    .servicios-container p{
+        font-size: 13.5px;
+        font-weight: 400;
+    }
+
 }
