--- a/less/global.less
+++ b/less/global.less
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    color: #4a4a4a;
 }
 
 html{
@@ -34,8 +35,8 @@ a:link, a:visited, a:hover, a:active {
     align-items: center;
 }
 
-p {
-    color: #4a4a4a;
+.line-off {
+    opacity: 0;
 }
 
 @media screen and(max-width: 780px){
