--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  color: #4a4a4a;
 }
 html {
   scroll-behavior: smooth;
@@ -38,8 +39,8 @@ a:active {
   -ms-flex-align: center;
   align-items: center;
 }
-p {
-  color: #4a4a4a;
+.line-off {
+  opacity: 0;
 }
 @media screen and (max-width: 780px) {
   .anchor {
@@ -151,7 +152,7 @@ button img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  border-bottom: 2px solid #005287;
+  border-bottom: 0.3px solid #f2f2f2;
 }
 #menu-desplegable div a {
   font-size: 14px;
@@ -214,6 +215,7 @@ button img {
   width: 100%;
   height: calc(100vh - 80px);
   max-height: 680px;
+  background: #f2f2f2;
 }
 #gallery {
   position: relative;
@@ -297,6 +299,11 @@ button img {
 #right-arrow div {
   width: 100%;
   height: 100%;
+}
+#left-arrow img,
+#right-arrow img {
+  width: 10px;
+  height: 17px;
 }
 #left-arrow {
   left: 0;
@@ -447,40 +454,47 @@ button img {
 #estudio {
   position: relative;
   width: 100%;
-  height: calc(100vh - 80px);
+  height: calc(100vh);
+  max-height: 750px;
   min-height: 600px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 .estudio-container {
-  width: 550px;
+  width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   margin: 6% auto 0 auto;
   padding: 0 18px;
   text-align: center;
-  color: black;
 }
-h3 {
-  font-size: 32px;
+.estudio-container h3 {
+  font-size: 28px;
   font-weight: 300;
+  margin-bottom: 10px;
 }
 .estudio-container h4 {
-  font-size: 1em;
+  font-size: 18px;
   font-weight: 500;
-  padding-bottom: 4%;
+  margin-bottom: 50px;
 }
 .estudio-container p {
-  font-size: 0.9em;
+  width: 100%;
+  max-width: 770px;
+  margin: 0 auto;
+  font-size: 14px;
   font-weight: 300;
   text-align: justify;
-  line-height: 26px;
+  line-height: 21px;
 }
 #estudio img {
   position: absolute;
   width: 450px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   right: 0;
   bottom: 0;
 }
@@ -493,6 +507,27 @@ h3 {
   width: 5px;
 }
 @media screen and (max-width: 780px) {
+  #estudio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    max-height: initial;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  #estudio img {
+    position: initial;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+  }
   #first-line {
     right: initial;
     left: 0;
@@ -501,16 +536,9 @@ h3 {
   }
 }
 @media screen and (max-width: 500px) {
-  #estudio {
-    height: calc(100vh);
-  }
   #first-line {
     height: 350px;
     min-height: initial;
-  }
-  #estudio img {
-    width: 100%;
-    left: initial;
   }
 }
 #servicios {
@@ -518,6 +546,15 @@ h3 {
   width: 100%;
   height: auto;
   padding-bottom: 60px;
+}
+#servicios-title {
+  width: 100%;
+  padding-top: 60px;
+  text-align: center;
+}
+#servicios-title h3 {
+  font-size: 28px;
+  font-weight: 300;
 }
 .servicios-container {
   max-width: 550px;
@@ -642,31 +679,40 @@ h3 {
 .p-description {
   position: absolute;
   width: 100%;
-  height: 30%;
-  bottom: 3px;
-  background: rgba(0, 0, 0, 0.8);
+  height: 25%;
+  top: 0;
+  background: red;
   font-size: 18px;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .data {
-  width: 90%;
-  height: auto;
-  margin-top: 6px;
+  width: calc(65% - 15px);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   margin-left: 15px;
+  margin-right: 12px;
+  font-size: 12px;
+  font-weight: 400;
+  color: #ffffff;
 }
-.data h4 {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 600;
-}
+.data h4,
 .data p {
-  font-weight: 300;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
+  color: #ffffff;
 }
 .link {
-  position: absolute;
-  right: 20px;
-  bottom: 15px;
+  width: calc(45% - 40px);
+  background: #e7205b;
   padding-bottom: 3px;
   border-bottom: 1px solid white;
 }
@@ -674,9 +720,6 @@ h3 {
   font-size: 16px;
   font-weight: 400;
   color: white;
-}
-.link a p::after {
-  content: " +";
 }
 .ver-mas {
   height: 60px;
