--- a/less/estudio.less
+++ b/less/estudio.less
@@ -1,41 +1,46 @@
 #estudio {
     position: relative;
     width: 100%;
-    height: calc(100vh - 80px);
+    height: calc(100vh);
+    max-height: 750px;
     min-height: 600px;
     display: flex;
 }
 
 .estudio-container{
-    width: 550px;
+    width: 100%;
     height: fit-content;
     margin: 6% auto 0 auto;
     padding: 0 18px;
     text-align: center;
-    color: black;
 }
 
-h3{
-    font-size: 32px;
+.estudio-container h3{
+    font-size: 28px;
     font-weight: 300;
+    margin-bottom: 10px;
 }
 
 .estudio-container h4{
-    font-size: 1em;
+    font-size: 18px;
     font-weight: 500;
-    padding-bottom: 4%;
+    margin-bottom: 50px;
 }
 
 .estudio-container p{
-    font-size: .9em;
+    width: 100%;
+    max-width: 770px;
+    margin: 0 auto;
+    font-size: 14px;
     font-weight: 300;
     text-align: justify;
-    line-height: 26px;
+    line-height: 21px;
 }
 
 #estudio img {
     position: absolute;
     width: 450px;
+    height: fit-content;
     right: 0;
     bottom: 0;
 }
@@ -51,10 +56,22 @@ h3{
 
 @media screen and(max-width: 780px){
 
-    // #estudio img {
-    //     width: 70%;
-    //     left: 15%;
-    // }
+    #estudio {
+        display: flex;
+        flex-direction: column;
+        max-height: initial;
+        height: fit-content;
+    }
+
+
+    #estudio img {
+        position: initial;
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 500px;
+        height: auto;
+    }
 
     #first-line {
         right: initial;
@@ -67,18 +84,11 @@ h3{
 
 @media screen and(max-width: 500px){
 
-    #estudio {
-        height: calc(100vh);
-    }
-
     #first-line {
         height: 350px;
         min-height: initial;
     }
 
-    #estudio img {
-        width: 100%;
-        left: initial;
-    }
+
 
 }
