--- a/less/hero-gallery.less
+++ b/less/hero-gallery.less
@@ -4,6 +4,7 @@
     width: 100%;
     height: calc(100vh - 80px);
     max-height: 680px;
+    background: #f2f2f2;
 }
 
 #gallery {
@@ -66,38 +67,43 @@
 }
 
 #left-arrow, #right-arrow{
-    position: absolute;
-    top: 0;
-    width: 5%;
-    min-width: 50px;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  width: 5%;
+  min-width: 50px;
+  height: 100%;
 }
 #left-arrow div, #right-arrow div{
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+#left-arrow img, #right-arrow img{
+  width: 10px;
+  height: 17px;
 }
 
 #left-arrow{
-    left: 0;
+  left: 0;
 }
 
 #right-arrow{
-    right: 0;
+  right: 0;
 }
 
 #right-arrow img {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 #hero-gallery h1 {
-    position: absolute;
-    top: 10%;
-    width: 100%;
-    font-size: 48px;
-    font-weight: 300;
-    text-align: center;
-    color: white;
-    text-shadow: 3px 3px 9px #0000002a;
+  position: absolute;
+  top: 10%;
+  width: 100%;
+  font-size: 48px;
+  font-weight: 300;
+  text-align: center;
+  color: white;
+  text-shadow: 3px 3px 9px #0000002a;
 }
 
 
