--- a/less/menu-desplegable.less
+++ b/less/menu-desplegable.less
@@ -14,7 +14,7 @@
     padding-left: 27px;
     display: flex;
     align-items: center;
-    border-bottom: 2px solid #005287;
+    border-bottom: .3px solid #f2f2f2;
 }
 
 #menu-desplegable div a{
