--- a/less/servicios.less
+++ b/less/servicios.less
@@ -5,6 +5,17 @@
     padding-bottom: 60px;
 }
 
+#servicios-title {
+    width: 100%;
+    padding-top: 60px;
+    text-align: center;
+}
+
+#servicios-title h3 {
+    font-size: 28px;
+    font-weight: 300;
+}
+
 .servicios-container{
     max-width: 550px;
     padding: 0 18px;
