--- a/less/proyects-page.less
+++ b/less/proyects-page.less
@@ -67,15 +67,16 @@
     background: #f3f3f3;
 }
 
-.data-title div {
+
+.data-content {
+    position: relative;
+    background: #d5d5d5;
+}
+.data-content div {
     position: absolute;
     width: 13px;
     left: 0;
     height: 100%;
-    background: #e7205b;
-}
-
-.data-content {
     background: #e7205b;
 }
 
