--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ button img {
   font-weight: 500;
 }
 .menu-off {
-  left: -80%;
+  left: -100%;
 }
 .menu-in {
   -webkit-animation-name: menuIn;
@@ -467,7 +467,7 @@ button img {
   height: -moz-fit-content;
   height: fit-content;
   margin: 6% auto 0 auto;
-  padding: 0 18px;
+  padding: 0 42px;
   text-align: center;
 }
 .estudio-container h3 {
@@ -545,36 +545,38 @@ button img {
   position: relative;
   width: 100%;
   height: auto;
-  padding-bottom: 60px;
 }
-#servicios-title {
+.section-title {
   width: 100%;
   padding-top: 60px;
   text-align: center;
 }
-#servicios-title h3 {
+.section-title h3 {
   font-size: 28px;
   font-weight: 300;
 }
 .servicios-container {
-  max-width: 550px;
-  padding: 0 18px;
-  margin: 0 auto;
-}
-.servicios-container img {
-  padding-top: 80px;
-  width: 40px;
-  margin-bottom: 5px;
+  width: 100%;
+  max-width: 770px;
+  text-align: center;
+  margin: 40px auto 0 auto;
 }
 .servicios-container h3 {
-  font-size: 24px;
+  text-transform: uppercase;
+  font-size: 18px;
+  padding-bottom: 15px;
+  font-weight: 700;
+  padding: 0 42px;
+  margin-bottom: 15px;
+  line-height: 22px;
   color: #e7205b;
 }
 .servicios-container p {
   padding-top: 10px;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 300;
-  line-height: 26px;
+  line-height: 21px;
+  padding: 0 42px;
   text-align: justify;
 }
 #second-line {
@@ -595,11 +597,11 @@ button img {
   }
 }
 @media screen and (max-width: 600px) {
+  .section-title h3 {
+    font-size: 18px;
+  }
   .servicios-container {
     text-align: center;
-  }
-  .servicios-container img {
-    width: 26px;
   }
   .servicios-container h3 {
     text-align: center;
@@ -607,7 +609,7 @@ button img {
     font-weight: 700;
   }
   .servicios-container p {
-    font-size: 13.5px;
+    font-size: 13px;
     font-weight: 400;
   }
 }
@@ -626,30 +628,11 @@ button img {
   -ms-flex-align: center;
   align-items: center;
 }
-#p-title,
 #p-container {
   width: 80%;
-}
-#p-title {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  margin-bottom: 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-#p-container {
-  width: 80%;
-  max-width: 1000px;
+  max-width: 830px;
   min-width: 800px;
+  margin-top: 40px;
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -681,27 +664,34 @@ button img {
   width: 100%;
   height: 25%;
   top: 0;
-  background: red;
+  background: rgba(0, 0, 0, 0.4);
   font-size: 18px;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 .data {
   width: calc(65% - 15px);
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-left: 15px;
   margin-right: 12px;
   font-size: 12px;
-  font-weight: 400;
+  font-weight: 300;
   color: #ffffff;
 }
 .data h4,
@@ -712,12 +702,29 @@ button img {
 }
 .link {
   width: calc(45% - 40px);
-  background: #e7205b;
-  padding-bottom: 3px;
-  border-bottom: 1px solid white;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
-.link a {
-  font-size: 16px;
+.link div {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 12px 20px;
+  background: rgba(0, 0, 0, 0.7);
+}
+.link div a {
+  font-size: 12px;
   font-weight: 400;
   color: white;
 }
@@ -757,7 +764,6 @@ button img {
     width: 100%;
     height: 25%;
     top: 0;
-    background: rgba(0, 0, 0, 0.8);
     font-size: 18px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -781,29 +787,7 @@ button img {
     font-weight: 300;
   }
   .link {
-    position: relative;
     width: 28%;
-    height: 50%;
-    background: rgba(0, 0, 0, 0.4);
-    border: none;
-    padding: 0;
-    left: 0;
-    bottom: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-  .link a p {
-    font-size: 12px;
-  }
-  .link a p::after {
-    content: "";
   }
   .ver-mas p {
     font-size: 12px;
