--- a/less/proyectos.less
+++ b/less/proyectos.less
@@ -7,23 +7,11 @@
     align-items: center;
 }
 
-#p-title, #p-container{
-    width: 80%;
-
-}
-#p-title {
-    height: fit-content;
-    margin-bottom: 30px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 #p-container {
     width: 80%;
-    max-width: 1000px;
+    max-width: 830px;
     min-width: 800px;
+    margin-top: 40px;
     height: auto;
     display: flex;
     flex-wrap: wrap;
@@ -49,22 +37,23 @@
     width: 100%;
     height: 25%;
     top: 0;
-    background: red;
-    // background: rgba(0, 0, 0, .8);
+    background: rgba(0, 0, 0, .4);
     font-size: 18px;
     color: white;
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-direction: row;
 }
 
  .data {
     width: calc(65% - 15px);
-    height: fit-content;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin-left: 15px;
     margin-right: 12px;
     font-size: 12px;
-    font-weight: 400;
+    font-weight: 300;
     color: #ffffff;
 }
 
@@ -76,13 +65,21 @@
 
 .link {
     width: calc(45% - 40px);
-    background: #e7205b;
-    padding-bottom: 3px;
-    border-bottom: 1px solid white;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.link a {
-    font-size: 16px;
+.link div {
+    width: fit-content;
+    height: fit-content;
+    padding: 12px 20px;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.link div a {
+    font-size: 12px;
     font-weight: 400;
     color: white;
 }
@@ -129,7 +126,6 @@
         width: 100%;
         height: 25%;
         top: 0;
-        background: rgba(0, 0, 0, .8);
         font-size: 18px;
         display: flex;
         align-items: center;
@@ -149,27 +145,9 @@
     }
     
     .link {
-        position: relative;
         width: 28%;
-        height: 50%;
-        background: rgba(0, 0, 0, 0.4);
-        border: none;
-        padding: 0;
-        left: 0;
-        bottom: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
-    .link a p{
-        font-size: 12px;
-    }
-    .link a p::after {
-        content: "";
-    }
-    //----------------------
-    
-    
+
     .ver-mas p {
         font-size: 12px;
     }
