--- a/less/servicios.less
+++ b/less/servicios.less
@@ -2,42 +2,43 @@
     position: relative;
     width: 100%;
     height: auto;
-    padding-bottom: 60px;
 }
 
-#servicios-title {
+.section-title {
     width: 100%;
     padding-top: 60px;
     text-align: center;
 }
 
-#servicios-title h3 {
+.section-title h3 {
     font-size: 28px;
     font-weight: 300;
 }
 
 .servicios-container{
-    max-width: 550px;
-    padding: 0 18px;
-    margin: 0 auto;
-}
-
-.servicios-container img{
-    padding-top: 80px;
-    width: 40px;
-    margin-bottom: 5px;
+    width: 100%;
+    max-width: 770px;
+    text-align: center;
+    margin: 40px auto 0 auto; 
 }
 
 .servicios-container h3{
-    font-size: 24px;
+    text-transform: uppercase;
+    font-size: 18px;
+    padding-bottom: 15px;
+    font-weight: 700;
+    padding: 0 42px;
+    margin-bottom: 15px;
+    line-height: 22px;
     color: #e7205b;
 }
 
 .servicios-container p{
     padding-top: 10px;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 300;
-    line-height: 26px;
+    line-height: 21px;
+    padding: 0 42px;
     text-align: justify;
 }
 
@@ -64,12 +65,12 @@
 
 @media screen and(max-width: 600px){
 
-    .servicios-container {
-        text-align: center;
+    .section-title h3 {
+        font-size: 18px;
     }
 
-    .servicios-container img{
-        width: 26px;
+    .servicios-container {
+        text-align: center;
     }
 
     .servicios-container h3{
@@ -79,7 +80,7 @@
     }
 
     .servicios-container p{
-        font-size: 13.5px;
+        font-size: 13px;
         font-weight: 400;
     }
 
