--- a/less/estudio.less
+++ b/less/estudio.less
@@ -9,6 +9,7 @@
 
 .estudio-container{
     width: 100%;
+    max-width: 770px;
     height: fit-content;
     margin: 6% auto 0 auto;
     padding: 0 42px;
