--- a/less/global.less
+++ b/less/global.less
@@ -39,6 +39,14 @@ a:link, a:visited, a:hover, a:active {
     opacity: 0;
 }
 
+.mark {
+    position: absolute;
+    top: 250px;
+    width: 100%;
+    height: 100px;
+    opacity: 0;
+}
+
 @media screen and(max-width: 780px){
 
     .anchor {
