--- a/less/proyects-page.less
+++ b/less/proyects-page.less
@@ -1,5 +1,6 @@
 @import 'global.less';
 @import 'nav.less';
+@import 'menu-desplegable.less';
 @import 'footer.less';
 
 @galleryBkg: #9b9b9b;
@@ -81,13 +82,14 @@
 }
 
 .data-title p{
-    font-weight: 500;
     font-size: 13px;
+    font-weight: 700;
 }
 
 .data-content p {
     font-size: 13px;
-    color: #ffffff;
+    font-weight: 700;
+    color: #4a4a4a;
 }
 
 .special-char {
@@ -100,7 +102,7 @@
         padding: 25px 0;
     }
     #project-title p {
-        font-size: 19px;
+        font-size: 13px;
     }
 
     #ficha-title {
@@ -108,7 +110,7 @@
     }
 
     #ficha-title p{
-        font-size: 16px;
+        font-size: 13px;
     }
 
     #ficha-container {
@@ -124,3 +126,5 @@
     }
     
 }
+
+@import 'full-gallery.less';
