--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@ a:active {
 .line-off {
   opacity: 0;
 }
+.mark {
+  position: absolute;
+  top: 250px;
+  width: 100%;
+  height: 100px;
+  opacity: 0;
+}
 @media screen and (max-width: 780px) {
   .anchor {
     top: -55px;
@@ -154,6 +161,9 @@ button img {
   align-items: center;
   border-bottom: 0.3px solid #f2f2f2;
 }
+#menu-desplegable div:hover {
+  background: #f2f2f2;
+}
 #menu-desplegable div a {
   font-size: 14px;
   font-weight: 500;
@@ -171,7 +181,7 @@ button img {
 }
 @-webkit-keyframes menuIn {
   from {
-    left: -80%;
+    left: -100%;
   }
   to {
     left: 0%;
@@ -179,7 +189,7 @@ button img {
 }
 @keyframes menuIn {
   from {
-    left: -80%;
+    left: -100%;
   }
   to {
     left: 0%;
@@ -198,7 +208,7 @@ button img {
     left: 0%;
   }
   to {
-    left: -80%;
+    left: -100%;
   }
 }
 @keyframes menuOut {
@@ -206,7 +216,7 @@ button img {
     left: 0%;
   }
   to {
-    left: -80%;
+    left: -100%;
   }
 }
 #hero-gallery {
@@ -463,6 +473,7 @@ button img {
 }
 .estudio-container {
   width: 100%;
+  max-width: 770px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -649,8 +660,8 @@ button img {
 }
 .thumbnail {
   position: relative;
-  width: 40%;
-  margin: 10px;
+  width: 42%;
+  margin: 6px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -731,12 +742,13 @@ button img {
 .ver-mas {
   height: 60px;
   width: 100%;
+  margin-top: 31px;
   background: #e7205b;
 }
 .ver-mas p {
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 700;
   color: white;
-  padding-top: 5px;
   text-transform: uppercase;
 }
 #third-line {
@@ -825,7 +837,7 @@ button img {
   height: -moz-fit-content;
   height: fit-content;
   padding-top: 5%;
-  margin-left: 18%;
+  margin-left: 20%;
   font-size: 13px;
 }
 #info p {
@@ -959,9 +971,13 @@ footer {
     height: 45px;
     margin: 5px;
   }
+  .f-logo img {
+    max-height: 21px;
+  }
   .f-dir1,
   .f-dir2 {
-    padding: 0 0 10px 0;
+    font-size: 9px;
+    padding: 0 0 9px 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
