--- a/less/footer.less
+++ b/less/footer.less
@@ -60,8 +60,13 @@ footer {
         margin: 5px;
     }
 
+    .f-logo img {
+        max-height: 21px;
+    }    
+
     .f-dir1, .f-dir2 {
-        padding: 0 0 10px 0;
+        font-size: 9px;
+        padding: 0 0 9px 0;
         flex-direction: column;
     }
 
