--- a/less/menu-desplegable.less
+++ b/less/menu-desplegable.less
@@ -17,6 +17,10 @@
     border-bottom: .3px solid #f2f2f2;
 }
 
+#menu-desplegable div:hover {
+    background: #f2f2f2;
+}
+
 #menu-desplegable div a{
     font-size: 14px;
     font-weight: 500;    
@@ -34,7 +38,7 @@
 
 @keyframes menuIn {
     from {
-        left: -80%;
+        left: -100%;
     }
     to {
         left: 0%;
@@ -53,6 +57,6 @@
         left: 0%;
     }
     to {
-        left: -80%;
+        left: -100%;
     }
 }
