--- a/less/proyectos.less
+++ b/less/proyectos.less
@@ -22,8 +22,8 @@
 
 .thumbnail {
     position: relative;
-    width: 40%;
-    margin: 10px;
+    width: 42%;
+    margin: 6px;
     height: fit-content;
 }
 
@@ -87,12 +87,13 @@
 .ver-mas {
     height: 60px;
     width: 100%;
+    margin-top: 31px;
     background: #e7205b;
 }
 .ver-mas p {
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 700;
     color: white;
-    padding-top: 5px;
     text-transform: uppercase;
 }
 
