--- a/css/style.css
+++ b/css/style.css
@@ -917,7 +917,8 @@ li {
   bottom: 0;
   right: 0;
   height: auto;
-  z-index: 20;
+  pointer-events: none;
+  z-index: 2;
 }
 @media screen and (max-width: 450px) {
   #contacto {
