--- a/less/style.less
+++ b/less/style.less
@@ -3,6 +3,7 @@
 @import 'menu-desplegable.less';
 @import 'hero-gallery.less';
 @import 'estudio.less';
+@import 'lines-wrapper.less';
 @import 'servicios.less';
 @import 'proyectos.less';
 @import 'contacto.less';
