--- a/css/style.css
+++ b/css/style.css
@@ -883,18 +883,14 @@ button img {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   cursor: pointer;
   z-index: 20;
 }
-#third-line {
-  position: absolute;
-  top: 5%;
-  height: 500px;
-  right: calc(100vw * 0.9);
-  height: 1000px;
-  width: 5px;
-  background: #fdc929;
-  z-index: 0;
+.ver-mas button:hover {
+  border-bottom: 1px solid white;
 }
 @media screen and (max-width: 780px) {
   #p-container {
@@ -936,12 +932,8 @@ button img {
   .link {
     width: 28%;
   }
-  .ver-mas p {
-    font-size: 12px;
-  }
-  #third-line {
-    left: 0;
-    height: 90%;
+  .ver-mas button:hover {
+    border-bottom: none;
   }
 }
 @media screen and (max-width: 630px) {
