--- a/less/proyectos.less
+++ b/less/proyectos.less
@@ -116,7 +116,7 @@
     font-weight: 500;
     color: white;
     text-transform: uppercase;
-    width: fit-content;
+    width: auto;
     height: fit-content;
     cursor: pointer;
     z-index: 20;
