--- a/css/style.css
+++ b/css/style.css
@@ -861,6 +861,7 @@ button img {
   height: fit-content;
   padding: 12px 20px;
   background: rgba(0, 0, 0, 0.7);
+  pointer-events: initial;
 }
 .link div a {
   font-size: 12px;
