--- a/less/proyectos.less
+++ b/less/proyectos.less
@@ -94,6 +94,7 @@
     height: fit-content;
     padding: 12px 20px;
     background: rgba(0, 0, 0, 0.7);
+    pointer-events: initial;
 }
 
 .link div a {
