--- a/less/nav.less
+++ b/less/nav.less
@@ -6,7 +6,7 @@ nav {
     height: 55px;
     z-index: 100;
     display: flex;
-    box-shadow: 3px 3px 9px #0000002a;
+    box-shadow: 3px 3px 9px rgba(0, 0, 0, .1);
     background: white;
 }
 
