--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,13 @@ a:active {
   height: 55px;
   z-index: 1;
 }
+#anchor-servicios {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 55px;
+  z-index: 1;
+}
 .center {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -72,8 +79,8 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-shadow: 3px 3px 9px #0000002a;
-  box-shadow: 3px 3px 9px #0000002a;
+  -webkit-box-shadow: 3px 3px 9px rgba(0, 0, 0, 0.1);
+  box-shadow: 3px 3px 9px rgba(0, 0, 0, 0.1);
   background: white;
 }
 nav #logo {
