--- a/less/global.less
+++ b/less/global.less
@@ -30,6 +30,14 @@ a:link, a:visited, a:hover, a:active {
     z-index: 1;
 }
 
+#anchor-servicios {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 55px;
+    z-index: 1;
+}
+
 .center{
     display: flex;
     justify-content: center;
