--- a/css/proyects-page.css
+++ b/css/proyects-page.css
@@ -516,6 +516,13 @@ footer {
   width: 80%;
   min-width: 700px;
   margin: 0 auto;
+  background: grey;
+}
+#gallery div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: blue;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -526,12 +533,22 @@ footer {
   -ms-flex-align: center;
   align-items: center;
 }
-#gallery img {
-  position: absolute;
-  width: auto;
-  height: auto;
+#gallery div img {
   max-width: 100%;
   max-height: 100%;
+}
+[data-orientation="port"] {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+[data-orientation="land"] {
+  -webkit-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+[data-title="custom"] {
+  background: black;
 }
 #gallery-buttons {
   position: fixed;
@@ -570,10 +587,14 @@ footer {
   width: auto;
 }
 .full-out {
-  display: none;
+  -webkit-transform: translate(-300%, 0%);
+  -ms-transform: translate(-300%, 0%);
+  transform: translate(-300%, 0%);
 }
 .full-center {
-  display: initial;
+  -webkit-transform: translate(0%, 0%);
+  -ms-transform: translate(0%, 0%);
+  transform: translate(0%, 0%);
 }
 .full-to-left {
   display: initial;
