--- a/less/full-gallery.less
+++ b/less/full-gallery.less
@@ -29,18 +29,37 @@
     width: 80%;
     min-width: 700px;
     margin: 0 auto;
+    background: grey;
+}
+
+#gallery div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: blue;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#gallery img {
-    position: absolute;
-    width: auto;
+#gallery div img {
+    width: 100%;
     height: auto;
-    max-width: 100%;
-    max-height: 100%;
+
 }
+
+[data-orientation="port"] {
+    transform: rotate(90deg);
+}
+
+[data-orientation="land"] {
+    transform: rotate(0deg);
+}
+
+[data-title="custom"] {
+    background: black;
+}
+
 
 #gallery-buttons {
     position: fixed;
@@ -57,10 +76,6 @@
 .g-first-btn {
     transform: scale(-1.1, 1.1);
 }
-
-// .g-close {
-//     transform: scale(1.4);
-// }
 
 .g-last-btn {
     transform: scale(1.1, 1.1);
@@ -79,11 +94,11 @@
 }
 
 .full-out {
-    display: none;
+    transform: translate(-300%, 0%);
 }
 
 .full-center {
-    display: initial;
+    transform: translate(0%, 0%);
 }
 
 .full-to-left {
@@ -91,14 +106,6 @@
     animation-name: fullToLeft;
     animation-duration: @fullDuration;
     animation-fill-mode: forwards;
-}
-
-[data-orientation="port"] {
-    transform: rotate(-90deg);
-}
-
-[data-orientation="land"] {
-    transform: rotate(0deg);
 }
 
 @keyframes fullToLeft {
