--- a/css/proyects-page.css
+++ b/css/proyects-page.css
@@ -514,15 +514,8 @@ footer {
   position: relative;
   height: 95%;
   width: 80%;
-  min-width: 700px;
+  min-width: initial;
   margin: 0 auto;
-  background: grey;
-}
-#gallery div {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: blue;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -533,9 +526,27 @@ footer {
   -ms-flex-align: center;
   align-items: center;
 }
+#gallery div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: pink;
+  border: 5px solid black;
+}
 #gallery div img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: auto;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
 [data-orientation="port"] {
   -webkit-transform: rotate(90deg);
