--- a/less/full-gallery.less
+++ b/less/full-gallery.less
@@ -27,25 +27,31 @@
     position: relative;
     height: 95%;
     width: 80%;
-    min-width: 700px;
+    min-width: initial;
     margin: 0 auto;
-    background: grey;
+    // background: grey;
+    display: flex;  //CHECK
+    justify-content: center; //CHECK
+    align-items: center; //CHECK
 }
 
 #gallery div {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: blue;
+    // background: blue;
+    // border: 3px solid pink;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: pink;
+    border: 5px solid black;
 }
 
-#gallery div img {
+#gallery div img { // check
     width: 100%;
     height: auto;
-
+    object-fit: contain;
 }
 
 [data-orientation="port"] {
@@ -56,7 +62,7 @@
     transform: rotate(0deg);
 }
 
-[data-title="custom"] {
+[data-title="custom"] { //check
     background: black;
 }
 
