--- a/css/proyects-page.css
+++ b/css/proyects-page.css
@@ -488,7 +488,7 @@ footer {
   height: 100vh;
   top: 0;
   z-index: 101;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.9);
   display: none;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -505,9 +505,9 @@ footer {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   overflow: hidden;
 }
 #gallery {
@@ -720,5 +720,23 @@ footer {
   #gallery,
   #gallery-buttons {
     min-width: initial;
+  }
+}
+@media screen and (max-width: 500px) {
+  #gallery {
+    width: 100%;
+  }
+}
+@media screen and (orientation: landscape) {
+  #gallery-container {
+    width: 100%;
+    height: 100%;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+  }
+  #gallery {
+    width: 100%;
+    height: 91%;
   }
 }
