--- a/less/full-gallery.less
+++ b/less/full-gallery.less
@@ -7,7 +7,7 @@
     height: 100vh;
     top: 0;
     z-index: 101;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, .9);
     display: none;
     align-items: center;
 }
@@ -19,7 +19,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     overflow: hidden;
 }
 
@@ -172,5 +172,21 @@
 }
 
 @media screen and (max-width: 500px){
-    
+    #gallery {
+        width: 100%;
+    }
+}
+
+@media screen and (orientation: landscape) {
+
+    #gallery-container {
+        width: 100%;
+        height: 100%;
+        align-items: flex-start;
+    }
+    #gallery {
+        width: 100%;
+        height: 91%;
+    }
+
 }
