--- a/css/proyects-page.css
+++ b/css/proyects-page.css
@@ -355,16 +355,19 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
-#project-title p {
+#project-title p:first-child {
   font-size: 30px;
   font-weight: 300;
+}
+.extra-info {
+  padding-top: 6px;
+  font-size: 12px;
+  font-size: 700;
 }
 #ficha-title {
   width: 95%;
