--- a/less/contacto.less
+++ b/less/contacto.less
@@ -46,6 +46,10 @@ li {
     z-index: 2;
 }
 
+#redes a:first-child{
+    margin: 0 30px 0  20px;
+}
+
 @media screen and (max-width: 450px){
 
     #contacto {
@@ -67,4 +71,9 @@ li {
         width: 100%;
         min-width: initial;
     }
+
+    #redes a:first-child{
+        margin: 0 20px 0  0px;
+    }
+    
 }
