--- a/less/proyects-page.less
+++ b/less/proyects-page.less
@@ -12,13 +12,17 @@
     text-align: center;
     height: fit-content;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
 }
 
-#project-title p {
+#project-title p:first-child {
     font-size: 30px;
     font-weight: 300;
+}
+.extra-info {
+    padding-top: 6px;
+    font-size: 12px;
+    font-size: 700;
 }
 #ficha-title {
     width: 95%;
