--- a/css/style.css
+++ b/css/style.css
@@ -1009,7 +1009,15 @@ li {
   z-index: 2;
 }
 #redes a:first-child {
+  width: auto;
+  height: auto;
   margin: 0 30px 0  20px;
+}
+#redes img {
+  width: 41px;
+}
+#redes img:last-child {
+  width: 43px;
 }
 @media screen and (max-width: 450px) {
   #contacto {
