--- a/less/contacto.less
+++ b/less/contacto.less
@@ -47,7 +47,17 @@ li {
 }
 
 #redes a:first-child{
+    width: auto;
+    height: auto;
     margin: 0 30px 0  20px;
+}
+
+#redes img {
+    width: 41px;
+}
+
+#redes img:last-child {
+    width: 43px;
 }
 
 @media screen and (max-width: 450px){
