--- a/css/proyects-page.css
+++ b/css/proyects-page.css
@@ -458,6 +458,9 @@ footer {
 .special-char {
   font-family: initial;
 }
+.br-baum {
+  display: none;
+}
 @media screen and (max-width: 660px) {
   #project-title {
     padding: 25px 0;
@@ -482,6 +485,17 @@ footer {
     width: 100%;
     height: 45px;
     margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 500px) {
+  #project-title p:first-child {
+    font-size: 27px;
+  }
+  #project-title span {
+    display: none;
+  }
+  .br-baum {
+    display: initial;
   }
 }
 #full-gallery {
